# UwUDiff

./: .gitignore  LICENSE.md  README.md  pyproject.toml
configs/: demo_metrics.yaml  demo_metrics_coco.yaml  demo_training.yaml  demo_training_latent.yaml  demo_training_lycoris.yaml
configs/lycoris/: sdxl-diffusers.toml
configs/model/: pretrained_sd.yaml  pretrained_sdxl.yaml  pretrained_sdxl_te_mask.yaml
configs/sampling/: demo_sampling.yaml  demo_sampling_layer.yaml  demo_sampling_layer_region.yaml  demo_sampling_region.yaml  demo_sampling_sd.yaml
src/duwu/: loader.py
src/duwu/data/: __init__.py  base.py  hf_dataset.py  text_image_local.py  utils.py
src/duwu/loss/: __init__.py  diff_losses.py  diffusion.py  rectified_flow.py  t_distributions.py
src/duwu/metrics/: __init__.py  clip.py  compute_metrics.py  fid.py
src/duwu/modules/: attention.py  attn_masks.py  cond_cnn.py  rope.py  rope_unet.py  text_encoders.py  unet_patch.py
src/duwu/modules/tests/: test_layer_attn.py  test_region_attn.py
src/duwu/sampling/: __init__.py  cfg.py  euler_latent.py  gbc_sampling.py  get_sigmas.py  k_diffusion_dpm2.py  k_diffusion_euler.py  k_diffusion_wrapper.py  sampling.py
src/duwu/trainer/: __init__.py  callbacks.py  nn_weighted_loss_trainer.py  optimizers.py  trainer.py
src/duwu/utils/: __init__.py  aggregation.py
test_scripts/: test_diffusion_scheduler.ipynb  test_lr_scheduler.ipynb  test_metrics.py  test_sampling.py  test_train.py
